--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.1",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
+    "papaparse": "^5.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -18,7 +20,8 @@
     "react-scripts": "5.0.1",
     "stream": "^0.0.3",
     "util": "^0.12.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
