--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.1",
+    "framer-motion": "^12.4.7",
     "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "papaparse": "^5.5.2",
