--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.1",
     "stream": "^0.0.3",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4",
